appId: eu.kanade.tachiyomi.sy.debug
---
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "Library"
    timeout: 30000
- tapOn: "Library"
- extendedWaitUntil:
    visible: ${TITLE}
    timeout: 30000
