appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "More"
    timeout: 30000
- tapOn: "More"
- tapOn: "Categories"
- extendedWaitUntil:
    visible: "Edit categories"
    timeout: 30000
- tapOn:
    point: 85%,93%
- extendedWaitUntil:
    visible: "Add category"
    timeout: 30000
- tapOn: "Name"
- inputText: ${NAME}
- tapOn:
    text: "Add"
    rightOf:
      text: "Cancel"
- back
- tapOn: "Categories"
- extendedWaitUntil:
    visible: ${NAME}
    timeout: 30000
