appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "More"
    timeout: 30000
- tapOn: "More"
- tapOn: "Categories"
- tapOn:
    text: "Delete"
    index: ${INDEX}
- tapOn: "OK"
- back
- tapOn: "Categories"
- extendedWaitUntil:
    notVisible: ${NAME}
    timeout: 30000
