appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "Library"
    timeout: 30000
- tapOn: "Library"
- longPressOn: ${TITLE}
- tapOn: "Mark as read"
- runFlow:
    when:
      visible: "Mark as read"
    commands:
      - tapOn: "Mark as read"
