appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "Library"
    timeout: 30000
- tapOn: "Library"
- longPressOn: ${TITLE}
- tapOn: "Set categories"
- extendedWaitUntil:
    visible: ${NEW}
    timeout: 30000
- tapOn:
    text: ${NEW}
    below:
      text: "Set categories"
- tapOn:
    text: ${OLD}
    below:
      text: "Set categories"
- tapOn: "OK"
