appId: eu.kanade.tachiyomi.sy.debug
---
- eraseText: 60
- inputText: ${NEW}
- tapOn: "OK"
- extendedWaitUntil:
    visible: ${NEW}
    timeout: 30000
