appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "More"
    timeout: 30000
- tapOn: "More"
- tapOn: "Categories"
- tapOn: ${OLD}
- extendedWaitUntil:
    visible: "Rename category"
    timeout: 30000
