appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- extendedWaitUntil:
    visible: "Restore"
    timeout: 30000
- tapOn: "Restore"
