appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "Library"
    timeout: 30000
- tapOn: "Library"
- longPressOn: ${TITLE}
- tapOn: "Set categories"
- extendedWaitUntil:
    visible: ${CATEGORY}
    timeout: 30000
- tapOn: ${CATEGORY}
- tapOn: "OK"
