appId: eu.kanade.tachiyomi.sy.debug
---
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
- launchApp:
    permissions: {}
- extendedWaitUntil:
    visible: "More"
    timeout: 30000
- tapOn: "More"
- tapOn: "Settings"
- tapOn: "Data and storage"
- scrollUntilVisible:
    element:
      text: "Sync now"
- tapOn: "Sync now"
